syntax = "proto3";

package helloworld;
option go_package = "github.com/DotAScripter/helm-demo-project/greetings/proto/helloworld";
option java_package = "com.hdp.jpod.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
